--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -1,7 +1,10 @@
 
 .normal {
     margin: 0 auto;
-    width: 350px;
-    height: 200px;
-    margin-top: 5%;
+    width: 450px;
+    height: 250px;
+    margin-top: calc(50vh - 125px);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 50px;
 }
