--- a/src/pages/list/index.css
+++ b/src/pages/list/index.css
@@ -1,4 +1,17 @@
+.searchWrap{
+    margin-bottom: 10px;
+}
+.form {
+    padding: 24px;
+    background: #fbfbfb;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+}
+  
+.ant-form-item {
+    display: flex;
+}
 
-.normal {
-  background: #79F2C0;
+.form .ant-form-item-control-wrapper {
+    flex: 1;
 }
