--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,8 +1,6 @@
-
 .normal {
   font-family: Georgia, sans-serif;
 }
-
 
 .trigger {
   font-size: 18px;
@@ -18,6 +16,12 @@
 
 .logo {
   height: 32px;
-  background: rgba(255,255,255,.2);
+  background: rgba(255, 255, 255, .2);
   margin: 16px;
+}
+
+.links {
+  a {
+    color: #fff;
+  }
 }
