增加登录及内页logo

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -15,9 +15,10 @@
 }
 
 .logo {
-  height: 32px;
-  background: rgba(255, 255, 255, .2);
+  height: 40px;
   margin: 16px;
+  background: url(../assets/cx-logo.png) no-repeat;
+  margin-left: 44px;
 }
 
 .links {
