--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
 html, body, #root {
   height: 100%;
   overflow: hidden;
+  font-family: "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 body {
@@ -15,4 +16,37 @@ body {
 .productImg{
   width: 100%;
   height: 100%;
+}
+
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.mark-tag{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border-radius: 10px;
+}
+.mark-tag-red{
+  border: 3px solid #f5222d;
+}
+.mark-tag-orange{
+  border: 3px solid #fa8c16;
+}
+.mark-tag-green{
+  border: 3px solid #52c41a;
+}
+.mark-tag-cyan{
+  border: 3px solid #13c2c2;
+}
+.mark-tag-blue{
+  border: 3px solid #1890ff;
+}
+.mark-tag-purple{
+  border: 3px solid #722ed1;
 }
