--- a/src/global.css
+++ b/src/global.css
@@ -27,10 +27,11 @@ body {
 }
 
 .mark-tag{
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  border-radius: 10px;
+  border-radius: 15px;
+  box-shadow: 0px 2px 5px rgba(0,0,0,.75);
 }
 .mark-tag-red{
   border: 3px solid #f5222d;
