--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -14,3 +14,6 @@
   margin-top: -10px;
   background: url(../../assets/login-logo.png) center center no-repeat
 }
+.btnWrap{
+  text-align: center;
+}
