--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ChuangXin</title>
+    <title>智能质检平台——创新奇智</title>
 </head>
 <body>
-    <div id="root"></div>    
+    <div id="root"></div>
 </body>
 </html>
