--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -1,19 +1,23 @@
-
 .normal {
   background: #fff;
 }
 
-.detail{
+.detail {
   clear: both;
 }
-.detail-wrap{
+
+.detail-wrap {
   overflow: hidden;
 }
 
 :global {
-  .real-time-title-badge{
-    .ant-tag{
+  .real-time-title-badge {
+    .ant-tag {
       margin-left: 20px;
     }
+  }
+  .productImg {
+    width: 100%;
+    height: 100%;
   }
 }
