用户信息联调，修改密码联调

--- a/src/pages/profile/index.less
+++ b/src/pages/profile/index.less
@@ -37,3 +37,12 @@
   margin-left: 320px;
   overflow: hidden;
 }
+
+.setPasswordWrap{
+  width: 400px;
+  margin: 0 auto;
+  line-height: 30px;
+  input{
+    margin-bottom: 10px;
+  }
+}
